# Bomberman

./: .clang-format  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: block.hpp.12F92EA8D67A5F40.idx  char.cpp.83C402ECEACA0217.idx  char.hpp.6E5EC3B773F26D35.idx  circular_list.hpp.FDF2955631CA5665.idx  defs.hpp.5A16774EEE395B4F.idx  game_session.cpp.8A10F61B683F775A.idx  game_session.hpp.EFAF3985011EC611.idx  ground_block.cpp.9BFA52F44FE83174.idx  ground_block.hpp.C83D5B54C70712D2.idx  main.cpp.9F782ABF2617C0B4.idx  map.cpp.2422E9304438B2E6.idx  map.cpp.BB3F4A3FAC211106.idx  map.cpp.C0B99CF7610DC9BD.idx  map.hpp.58FE4BA64DD628A4.idx  map.hpp.7AE0829D37AC1BA2.idx  map.hpp.9195331FD0C2B536.idx  map_file_keys.hpp.05F8BE7BBF43CB32.idx  map_file_keys.hpp.299BD467A1BA3535.idx  map_loader.cpp.24188CC6DD052F3A.idx  map_loader.hpp.5408A95828729D04.idx  map_reader.cpp.4E4BD0137BDF373F.idx  map_reader.cpp.D31CB6572E7DE780.idx  map_reader.hpp.06343803C51D8722.idx  map_reader.hpp.3C41B5B7AC7FF9DB.idx  map_reader.hpp.95D51C7FA8BA67EB.idx  map_writer.cpp.4069CE1284ADB99F.idx  map_writer.cpp.766651613E0FA301.idx  map_writer.hpp.CB6C6B264F30122F.idx  map_writer.hpp.F8DFB701993CDF8A.idx  renderable_object.hpp.1086C1478797C71F.idx  renderer_window.cpp.AF40D28372C82CA0.idx  renderer_window.hpp.90FF17BDCF462835.idx  sdl_deleter.hpp.EF9D1829D2F3C5C8.idx  test_map.cpp.90C6C591EFBCDBED.idx  test_map.cpp.D72CE98AF25EA806.idx  wall_block.cpp.D8A0D8D08F7F75F4.idx  wall_block.hpp.3F15B32391762CC8.idx
Char/: CMakeLists.txt  char.cpp  char.hpp
IO/: CMakeLists.txt  map_reader.hpp
Memory/: .sdl_deleter.hpp.swp  sdl_deleter.hpp
Renderer/: CMakeLists.txt  renderer_window.cpp  renderer_window.hpp
Scenario/: CMakeLists.txt  block.hpp  defs.hpp  ground_block.cpp  ground_block.hpp  map.cpp  map.hpp  wall_block.cpp  wall_block.hpp
Scenario/Common/: renderable_object.hpp
Utils/: circular_list.hpp  test_circular_list.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  README.md  dependencies.cmake  gtest.cmake  nlohmann_json.cmake  sdl2.cmake
project/backend/: CMakeLists.txt
project/backend/game_session/: CMakeLists.txt
project/backend/game_session/api/: game_session.hpp
project/backend/game_session/src/: game_session.cpp
project/backend/map/: CMakeLists.txt
project/backend/map/api/: map.hpp  map_reader.hpp  map_writer.hpp
project/backend/map/src/: map.cpp  map_file_keys.hpp  map_reader.cpp  map_writer.cpp
project/backend/map/tests/: CMakeLists.txt  test_map.cpp
res/: map1.txt  map2.txt
