cmake_minimum_required(VERSION 3.0.0)
project(BomberMan)

IF(WIN32)
	list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
	set(SDL2IMAGE_LIBRARY "<PATH>/SDL2_image.lib" CACHE FILEPATH "file cache entry for your SDL2IMAGE_LIBRARY path")

	find_package(SDL2 REQUIRED)
	find_package(SDL2_IMAGE REQUIRED)
ELSE()
	find_package(SDL2 REQUIRED)
	INCLUDE(FindPkgConfig)
	PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
	include_directories(${SDL2_INCLUDE_DIRS})
ENDIF()

set (CMAKE_CXX_STANDARD 14)

add_subdirectory(Renderer)
add_subdirectory(Scenario)
add_subdirectory(Char)

IF(WIN32)
    add_executable(play main.cpp)
	target_link_libraries(play  PUBLIC  ${SDL2MAIN_LIBRARY} ${SDL2_LIBRARY} ${SDL2IMAGE_LIBRARY} renderer scenario char)
	target_include_directories(play PUBLIC ${CMAKE_SOURCE_DIR} ${SDL2_INCLUDE_DIR})
ELSE()
	add_executable(play main.cpp)
    target_link_libraries(play  PUBLIC SDL2::SDL2 ${SDL2IMAGE_LIBRARY}  renderer scenario char)
	target_include_directories(play PUBLIC ${CMAKE_SOURCE_DIR})
ENDIF()